Fix Center Alignment
Fix center alignment on Tracking Section

--- a/app/assets/stylesheets/modules/marketing-section.css.scss
+++ b/app/assets/stylesheets/modules/marketing-section.css.scss
@@ -76,6 +76,7 @@
 
 .marketing-section-tracking {
   background-color: #fff;
+  text-align: center;
 }
 
 .marketing-section-finding {
